# agentic-orch-framework

./: .env.dev  .env.example  .env.example.consolidated  .env.example.new  .env.example.normalized  .env.production  .env.staging  .gitignore  API_GATEWAY_GRADING_REPORT.md  CODE_AUDIT_REPORT.md  COMPREHENSIVE_PRODUCTION_GRADING_REPORT.md  Cargo.toml  DEPLOYMENT.md  Dockerfile.template  ERROR_HANDLING_GRADING_REPORT.md  EXECUTOR_GRADING_REPORT.md  FINAL_PORT_MAP.md  NEXT_STEPS.md  PRODUCTION_GRADING_PLAN.md  PROJECT_COMPLETION_SUMMARY.md  README.md  REPO_DIAGRAM.md  SPACE_X_PRODUCTION_GRADING_FRAMEWORK.md  agent_build.txt  agent_build2.txt  agent_build3.txt  agent_build4.txt  agent_build5.txt  agent_build6.txt  agent_build7.txt  agent_build8.txt  agent_build9.txt  api-gateway-security-test-report.json  api-gateway-security-test.py  api_build.txt  api_build2.txt  api_build3.txt  api_build4.txt  api_build5.txt  api_build6.txt  (+54 more)
.github/: codecov.yml  dependabot.yml
.proto/: agi_core.proto  auth_service.proto  curiosity_engine.proto  log_analyzer.proto  secrets_service.proto
action-ledger-rs/: Cargo.toml  README.md
action-ledger-rs/src/: lib.rs
agent-registry-rs/: Cargo.toml  README.md  build.rs
agent-registry-rs/src/: lib.rs  main.rs
agent-registry-rs/tests/: integration_test.rs
api-gateway-rs/: Cargo.toml  README.md  build.rs
api-gateway-rs/src/: auth_client.rs  auth_middleware.rs  lib.rs  main.rs  phoenix_auth.rs  rate_limit.rs  secrets_client.rs  validation.rs
auth-service-rs/: Cargo.toml  Dockerfile.dev  README.md  build.rs
auth-service-rs/src/: admin.rs  audit.rs  auth_service.rs  certificates.rs  delegation.rs  jwt.rs  lib.rs  main.rs  middleware.rs  rbac.rs  secrets_client.rs  service_mesh.rs  storage.rs  token_manager.rs
blue-team-rs/: Cargo.toml  README.md
blue-team-rs/src/: main.rs
body-kb-rs/: Cargo.toml  Dockerfile.dev  README.md  build.rs
body-kb-rs/src/: lib.rs  main.rs  validation.rs
certs/: README.md  generate_certs.sh
config/: README.md  agent_registry.toml  phoenix.toml  phoenix_api_keys.txt  test_api_keys.txt
config-management-rs/: Cargo.toml
config-management-rs/src/: lib.rs
config-rs/: Cargo.toml  README.md
config-update-rs/: Cargo.toml  README.md
config-update-rs/src/: lib.rs
context-manager-rs/: Cargo.toml  README.md
context-manager-rs/src/: lib.rs  main.rs
curiosity-engine-rs/: Cargo.toml  Dockerfile.dev  README.md  build.rs
curiosity-engine-rs/src/: curiosity_engine.rs  lib.rs  main.rs
data-router-rs/: Cargo.toml  Dockerfile.dev  README.md
data-router-rs/src/: circuit_breaker.rs  kb_clients.rs  language_detector.rs  lib.rs  main.rs  router.rs
data-router-rs/src/tests/: scope_isolation_tests.rs
docker/: README.md  docker-compose.security-metrics.yml  docker-compose.yml
docs/: cicd-documentation.md  environment-configuration-guide.md  input-validation-framework.md  service_ports.md
documentation/: Master_System_Prompt_AGI_System_Build.md
error-handling-rs/: Cargo.toml  README.md
error-handling-rs/src/: circuit_breaker.rs  context.rs  fallback.rs  lib.rs  logging.rs  monitoring.rs  reporting.rs  retry.rs  sanitization.rs  supervisor.rs  types.rs
executor-rs/: Cargo.toml  README.md  build.rs  security_test.py  security_validation.py  security_validation_report.json  security_validation_simple.py  test_client.py
executor-rs/src/: config.rs  execution_logic.rs  lib.rs  main.rs  monitoring.rs  performance.rs  recovery_logger.rs  security.rs  windows_executor.rs
executor-rs/tests/: service_recovery_tests.rs
federated-learning-rs/: Cargo.toml  README.md
federated-learning-rs/src/: lib.rs
frontend/: package-lock.json  (+1 more)
heart-kb-rs/: Cargo.toml  Dockerfile.dev  README.md
heart-kb-rs/src/: main.rs  validation.rs
input-validation-rs/: Cargo.toml  README.md
input-validation-rs/src/: builder.rs  errors.rs  lib.rs  schema.rs
input-validation-rs/src/sanitizers/: command.rs  html.rs  mod.rs  path.rs  string.rs
input-validation-rs/src/validators/: generic.rs  mod.rs  numeric.rs  path.rs  redos.rs  security.rs  string.rs  url.rs
llm-service-rs/: Cargo.toml  Dockerfile  Dockerfile.dev  README.md  build.rs
llm-service-rs/src/: llm_client.rs  main.rs  secrets_client.rs  tests.rs
log-analyzer-rs/: Cargo.toml  Dockerfile.dev  README.md  build.rs
log-analyzer-rs/src/: log_analyzer.rs  main.rs
logging-service-rs/: Cargo.toml  Dockerfile.dev  README.md  build.rs
logging-service-rs/src/: main.rs
mind-kb-rs/: Cargo.toml  Dockerfile.dev  README.md  build.rs
mind-kb-rs/src/: graph_db.rs  lib.rs  main.rs  queries.rs  text_preprocessor.rs  validation.rs  vector_store.rs
orchestrator-service-rs/: Cargo.toml  Dockerfile  Dockerfile.dev  README.md  build.rs
orchestrator-service-rs/src/: api_client.rs  main.rs
orchestrator-service-rs/src/tests/: registry_integration_tests.rs
orchestrator-service-rs/tests/: plan_and_execute_e2e.rs
persistence-kb-rs/: Cargo.toml  README.md  build.rs
persistence-kb-rs/src/: main.rs  snapshot.rs
phoenix-orch-monolith-rs/: Cargo.toml
phoenix-orch-monolith-rs/src/: error.rs  lib.rs  main.rs  resilience.rs
phoenix-orch-monolith-rs/src/emergency/: mod.rs
phoenix-orch-monolith-rs/src/services/: mod.rs
phoenix-orch-monolith-rs/src/windows/: mod.rs
phoenix-orch-monolith-rs/tests/: integration_test.rs
reflection-service-rs/: Cargo.toml  Dockerfile.dev  README.md  build.rs
reflection-service-rs/src/: logging_client.rs  main.rs  reflection_logic.rs  service.rs  soul_kb_client.rs  tests.rs
secrets-service-rs/: Cargo.toml  Dockerfile  Dockerfile.dev  README.md  build.rs
secrets-service-rs/src/: auth.rs  main.rs  service.rs  vault_client.rs
self-improve-rs/: Cargo.toml  README.md
self-improve-rs/src/: adaptation.rs  classifier.rs  error_record.rs  lib.rs  model.rs  repository.rs  tests.rs
sensor-rs/: Cargo.toml  README.md  build.rs
sensor-rs/src/: main.rs  system_monitor.rs
shared-types-rs/: Cargo.toml  README.md
shared-types-rs/src/: config.rs  lib.rs  secrets.rs
telemetrist-rs/: Cargo.toml  README.md
telemetrist-rs/src/: lib.rs
(+165 files in other folders)
