# Cargo.toml - Master Workspace File
[workspace]
resolver = "2"
members = [
    "orchestrator-service-rs",
    "llm-service-rs",
    "tools-service-rs",
    "tool-sdk",
    "safety-service-rs",
    "logging-service-rs",
    "data-router-rs",
    "mind-kb-rs",
    "body-kb-rs",
    "heart-kb-rs",
    "social-kb-rs",
    "soul-kb-rs",
    "sensor-rs",
    "context-manager-rs",
    "reflection-rs",
    "scheduler-rs",
    "agent-registry-rs",
    "api-gateway-rs",
    "secrets-service-rs",
    "input-validation-rs",
    "config-rs",
    "log-analyzer-rs",
    "curiosity-engine-rs",
    "shared-types-rs",
    "auth-service-rs",
    "executor-rs",
    "reflection-service-rs",
    "self-improve-rs",
    "action-ledger-rs",
]

[profile.release]
opt-level = 3
lto = "fat"
codegen-units = 1
strip = "symbols"
