[package]
name = "action-ledger-rs"
version = "0.1.0"
edition = "2021"
description = "Deterministic append-only Action Ledger for Phoenix ORCH AGI"

[lib]
name = "action_ledger"
path = "src/lib.rs"

[dependencies]
tokio = { version = "1.48.0", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
bincode = "1.3"
sha2 = "0.10"
aes-gcm = "0.10"
rand = "0.8"
thiserror = "1.0.50"
uuid = { version = "1.11", features = ["v4", "serde"] }
chrono = { version = "0.4", features = ["serde"] }

# Optional HTTP/service layer and config integration will be added later if needed.