[package]
name = "agent-registry-rs"
version = "0.1.0"
edition = "2021"

[dependencies]
log = "0.4.29"
prost = "0.14.1"
tokio = { version = "1.48.0", features = ["full"] }
tonic = "0.14.2"
tonic-prost = "0.14.2"
tracing = "0.1.43"
async-trait = "0.1"
env_logger = "0.11"
once_cell = "1.20"
toml = "0.8"
serde = { version = "1.0", features = ["derive"] }
uuid = { version = "1.11", features = ["v4"] }

[build-dependencies]
tonic-prost-build = "0.14.2"
