[package]
name = "agent-registry-rs"
version = "0.1.0"
edition = "2021"

[lib]
name = "agent_registry"
path = "src/lib.rs"

[dependencies]
tokio = { version = "1.48.0", features = ["full"] }
tracing = "0.1.43"
async-trait = "0.1"
once_cell = "1.20"
toml = "0.8"
serde = { version = "1.0", features = ["derive"] }
uuid = { version = "1.11", features = ["v4"] }

# Remove gRPC dependencies as they're no longer needed
# prost = "0.14.1"
# tonic = "0.14.2"
# tonic-prost = "0.14.2"
# tonic-health = "0.14.2"

[dev-dependencies]
tokio-test = "0.4"
