[package]
name = "agent-registry-rs"
version = "0.1.0"
edition = "2021"



[[bin]]
name = "agent-registry"
path = "src/main.rs"

[dependencies]
tokio = { version = "1.48.0", features = ["full"] }
tracing = "0.1.43"
async-trait = "0.1"
once_cell = "1.20"
toml = "0.8"
serde = { version = "1.0", features = ["derive"] }
uuid = { version = "1.11", features = ["v4"] }
log = "0.4"
env_logger = "0.11"

# gRPC dependencies
prost = "0.14.1"
tonic = "0.14.2"
tonic-prost = "0.14.2"
tonic-health = "0.14.2"

[build-dependencies]
tonic-prost-build = "0.14.2"
protoc-bin-vendored = "3.0"

[dev-dependencies]
tokio-test = "0.4"
