[package]
name = "api-gateway-rs"
version = "0.1.0"
edition = "2021"

[dependencies]
log = "0.4.29"
prost = "0.14.1"
tokio = { version = "1.48.0", features = ["full"] }
tonic = "0.14.2"
tonic-prost = "0.14.2"
tracing = "0.1.43"
async-trait = "0.1"
env_logger = "0.11"
once_cell = "1.20"
uuid = { version = "1.11", features = ["v4", "serde"] }
dotenv = "0.15.0"
thiserror = "1.0.50"
chrono = { version = "0.4.31", features = ["serde"] }
# Axum for REST API
axum = "0.7"
tower = "0.5"
tower-http = { version = "0.6", features = ["cors", "trace", "limit"] }
# JSON handling
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
# HTTP
hyper = { version = "1.5", features = ["full"] }
# Input validation
# Temporarily commented out due to compilation issues
# input-validation-rs = { path = "../input-validation-rs" }
config-rs = { path = "../config-rs" }
regex = "1.9"
jsonschema = "0.17"

[build-dependencies]
tonic-prost-build = "0.14.2"
