[package]
name = "api-gateway-rs"
version = "0.1.0"
edition = "2021"

[lib]
name = "api_gateway"
path = "src/lib.rs"

[dependencies]
# Core async runtime
tokio = { version = "1.48.0", features = ["full"] }
tonic = "0.14.2"
hyper = { version = "1.5", features = ["full"] }

# Logging and tracing
tracing = "0.1.43"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

# Web framework and middleware
axum = "0.7"
tower = "0.5"
tower-http = { version = "0.6", features = ["cors", "trace", "limit"] }
tower-governor = "0.4"
governor = "0.6"

# Authentication and security
rustls = "0.21"
rustls-pemfile = "1.0"
axum-server = { version = "0.6", features = ["tls-rustls"] }

# Serialization and validation
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
jsonschema = "0.17"
regex = "1.9"

# Utilities
uuid = { version = "1.11", features = ["v4", "serde"] }
once_cell = "1.20"
thiserror = "1.0.50"
chrono = { version = "0.4.31", features = ["serde"] }

# Internal dependencies
config-rs = { path = "../config-rs" }

[dev-dependencies]
tokio-test = "0.4"
