[package]
name = "auth-service-rs"
version = "0.1.0"
edition = "2021"
description = "Authentication and Authorization Library for Phoenix ORCH AGI"

[lib]
name = "auth_service"
path = "src/lib.rs"

[[bin]]
name = "auth-service"
path = "src/main.rs"

[dependencies]
# Core runtime
tokio = { version = "1.32.0", features = ["full"] }
futures = "0.3.28"
async-trait = "0.1.73"
once_cell = "1.18.0"
anyhow = "1.0.75"
thiserror = "1.0.47"

# Serialization and data
serde = { version = "1.0.183", features = ["derive"] }
serde_json = "1.0.105"
toml = "0.8.0"
uuid = { version = "1.4.1", features = ["v4", "serde"] }
chrono = { version = "0.4.31", features = ["serde"] }

# JWT
jsonwebtoken = "8.3.0"
rand = "0.8.5"
base64 = "0.21.2"
zeroize = "1.6.0"

# Cryptography and security
sha2 = "0.10.7"
ed25519-dalek = "1.0.1"
x509-parser = "0.15.1"
rcgen = "0.12.0"
ring = "0.17.5"

# Database and storage
redis = { version = "0.23.3", features = ["tokio-comp", "connection-manager"] }
sqlx = { version = "0.7.1", features = ["runtime-tokio-rustls", "postgres", "json", "chrono", "uuid"] }

# Logging and metrics
tracing = "0.1.37"
tracing-subscriber = { version = "0.3.17", features = ["env-filter", "json"] }
tracing-appender = "0.2.2"
log = "0.4.20"

# Configuration
config = "0.13.3"

# Utilities
regex = "1.9.3"
url = "2.4.0"

[dev-dependencies]
tokio-test = "0.4.3"
mockall = "0.11.4"
tempfile = "3.8.0"