[package]
name = "body-kb-rs"
version = "0.1.0"
edition = "2024"
description = "Body Knowledge Base Library for Phoenix ORCH AGI"

[lib]
name = "body_kb"
path = "src/lib.rs"

[dependencies]
# Core async runtime
tokio = { version = "1.48.0", features = ["full"] }
futures = "0.3"

# Logging
tracing = "0.1.43"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

# Error handling
anyhow = "1.0"
thiserror = "1.0"

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# Utilities
async-trait = "0.1"
once_cell = "1.20"

# Input validation
input-validation-rs = { path = "../input-validation-rs" }

[build-dependencies]
tonic-prost-build = "0.14.2"

[dev-dependencies]
tokio-test = "0.4"
mockall = "0.11"
