[package]
name = "config-update-rs"
version = "0.1.0"
edition = "2021"
description = "Configuration Update Service for Phoenix ORCH AGI"

[lib]
name = "config_update"
path = "src/lib.rs"

[dependencies]
# Core async runtime
tokio = { version = "1.48.0", features = ["full"] }
futures = "0.3"

# Logging and tracing
tracing = "0.1.43"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
log = "0.4.29"

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
toml = "0.8"

# HTTP client for downloads
reqwest = { version = "0.12", features = ["json", "stream"] }

# Cryptography for signature verification
ring = "0.17"
base64 = "0.21"
sha2 = "0.10"

# File system operations
walkdir = "2"

# Error handling
thiserror = "1.0.50"
anyhow = "1.0"

# Time handling
chrono = "0.4"

# Utilities
uuid = { version = "1.11", features = ["v4"] }
once_cell = "1.20"

# Configuration
shared-types-rs = { path = "../shared-types-rs" }

[dev-dependencies]
tokio-test = "0.4"
mockall = "0.11"
tempfile = "3.8"

