[package]
name = "context-manager-rs"
version = "0.1.0"
edition = "2024"
description = "Context Management Library for Phoenix ORCH AGI"

[lib]
name = "context_manager"
path = "src/lib.rs"

[dependencies]
# Core async runtime
tokio = { version = "1.48.0", features = ["full"] }
futures = "0.3"

# gRPC and Protocol Buffers
tonic = "0.14.2"
prost = "0.14.1"

# Logging and tracing
tracing = "0.1.43"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

# Error handling
anyhow = "1.0"
thiserror = "1.0"

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# Time handling
chrono = "0.4"

# Utilities
async-trait = "0.1"
once_cell = "1.20"
uuid = { version = "1.11", features = ["v4"] }

[build-dependencies]
tonic-prost-build = "0.14.2"

[dev-dependencies]
tokio-test = "0.4"
mockall = "0.11"
