[package]
name = "curiosity-engine-rs"
version = "0.1.0"
edition = "2021"
description = "Curiosity Engine Library for Phoenix ORCH AGI"

[lib]
name = "curiosity_engine"
path = "src/lib.rs"

[dependencies]
# Core async runtime
tokio = { version = "1", features = ["full"] }
futures = "0.3"

# gRPC and Protocol Buffers
tonic = "0.9"
prost = "0.11"

# Error handling
anyhow = "1.0"
thiserror = "1.0"

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# Logging
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

[build-dependencies]
tonic-build = "0.9"

[dev-dependencies]
tokio-test = "0.4"
mockall = "0.11"