[package]
name = "error-handling-rs"
version = "0.1.0"
edition = "2021"
description = "Comprehensive error handling framework for the Phoenix ORCH AGI system"

[dependencies]
# Error handling
thiserror = "1.0"
anyhow = "1.0"

# Logging and tracing
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "json"] }
tracing-appender = "0.2"

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# Async runtime
tokio = { version = "1.0", features = ["full"] }

# UUID generation for correlation IDs
uuid = { version = "1.0", features = ["v4", "serde"] }

# Metrics for error reporting
metrics = "0.20"
metrics-exporter-prometheus = "0.12"

# HTTP client for reporting
reqwest = { version = "0.11", features = ["json"] }

# Environment variables
dotenv = "0.15"
config = "0.13"

# Time handling
chrono = { version = "0.4", features = ["serde"] }

# Backtrace capture
backtrace = "0.3"

# Additional utilities used by the framework
once_cell = "1.19"
regex = "1.10"
rand = "0.8"
futures = "0.3"

[dev-dependencies]
tokio-test = "0.4"
test-log = "0.2"