[package]
name = "federated-learning-rs"
version = "0.1.0"
edition = "2021"
description = "Federated Learning Coordinator for Phoenix ORCH AGI"

[lib]
name = "federated_learning"
path = "src/lib.rs"

[dependencies]
# Core async runtime
tokio = { version = "1.48.0", features = ["full"] }
futures = "0.3"

# Logging and tracing
tracing = "0.1.43"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
log = "0.4.29"

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# HTTP client
reqwest = { version = "0.12", features = ["json"] }

# Error handling
thiserror = "1.0.50"
anyhow = "1.0"

# Time handling
chrono = "0.4"

# Utilities
uuid = { version = "1.11", features = ["v4"] }
once_cell = "1.20"

# Internal dependencies
telemetrist = { path = "../telemetrist-rs", package = "telemetrist-rs" }
config_update = { path = "../config-update-rs", package = "config-update-rs" }
self_improve = { path = "../self-improve-rs", package = "self-improve-rs" }

[dev-dependencies]
tokio-test = "0.4"
mockall = "0.11"

