[package]
name = "heart-kb-rs"
version = "0.1.0"
edition = "2024"

[dependencies]
log = "0.4.29"
prost = "0.14.1"
tokio = { version = "1.48.0", features = ["full"] }
tonic = "0.14.2"
tonic-prost = "0.14.2"
tracing = "0.1.43"
async-trait = "0.1"
env_logger = "0.11"
once_cell = "1.20"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
# Input validation
input-validation-rs = { path = "../input-validation-rs" }

[build-dependencies]
tonic-prost-build = "0.14.2"
