[package]
name = "llm-service-rs"
version = "0.1.0"
edition = "2021"

[dependencies]
config-rs = { path = "../config-rs" }
log = "0.4.29"
prost = "0.14.1"
tokio = { version = "1.48.0", features = ["full"] }
tonic = "0.14.2"
tonic-prost = "0.14.2"
tracing = "0.1.43"
async-trait = "0.1"
env_logger = "0.11"
reqwest = { version = "0.12", features = ["json"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
dotenv = "0.15"
once_cell = "1.20"
backoff = { version = "0.4", features = ["tokio"] }
rand = "0.8"

[build-dependencies]
tonic-prost-build = "0.14.2"
