[package]
name = "log-analyzer-rs"
version = "0.1.0"
edition = "2021"

[dependencies]
tonic = "0.9"
prost = "0.11"
tokio = { version = "1", features = ["macros", "rt-multi-thread"] }
regex = "1"
tokenizers = "0.13"
anyhow = "1"
serde = { version = "1", features = ["derive"] }
serde_json = "1"

[build-dependencies]
tonic-build = "0.9"