[package]
name = "persistence-kb-rs"
version = "0.1.0"
edition = "2021"

[dependencies]
tonic = "0.9"
prost = "0.12"
tokio = { version = "1.0", features = ["macros", "rt-multi-thread"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
once_cell = "1.19"
env_logger = "0.10"
log = "0.4"
regex = "1.0"

[build-dependencies]
tonic-build = "0.9"