[package]
name = "persistence-kb-rs"
version = "0.1.0"
edition = "2021"

[dependencies]
tonic = "0.14.2"
prost = "0.14.1"
tonic-prost = "0.14.2"
tokio = { version = "1.48.0", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
once_cell = "1.20"
env_logger = "0.11"
log = "0.4.29"
regex = "1.11"
tracing = "0.1.43"
async-trait = "0.1"

[build-dependencies]
tonic-prost-build = "0.14.2"