[package]
name = "reflection-service-rs"
version = "0.1.0"
edition = "2021"

[dependencies]
# gRPC
tonic = "0.10.2"
prost = "0.12.1"
# Async
tokio = { version = "1.34.0", features = ["rt-multi-thread", "macros", "time"] }
# Error handling
thiserror = "1.0.50"
anyhow = "1.0.75"
# Logging
log = "0.4.20"
env_logger = "0.10.1"
# Utilities
serde = { version = "1.0.193", features = ["derive"] }
serde_json = "1.0.108"
dotenv = "0.15.0"
uuid = { version = "1.5.0", features = ["v4", "serde"] }
chrono = { version = "0.4.31", features = ["serde"] }
async-trait = "0.1.74"
self_improve = { path = "../self-improve-rs", package = "self-improve-rs" }

[build-dependencies]
tonic-build = "0.10.2"

[dev-dependencies]
tempfile = "3.8"