[package]
name = "secrets-service-rs"
version = "0.1.0"
edition = "2021"

[dependencies]
config-rs = { path = "../config-rs" }
# Vault client
hashicorp_vault = "2.1.0"
# gRPC
tonic = "0.14.2"
prost = "0.14.1"
tonic-prost = "0.14.2"
# Async
tokio = { version = "1.48.0", features = ["full"] }
# Error handling
thiserror = "1.0.50"
anyhow = "1.0.75"
# Logging
log = "0.4.20"
env_logger = "0.10.1"
# Utilities
serde = { version = "1.0.193", features = ["derive"] }
serde_json = "1.0.108"
dotenv = "0.15.0"
uuid = { version = "1.5.0", features = ["v4", "serde"] }
chrono = { version = "0.4.31", features = ["serde"] }
rand = "0.8.5"
async-trait = "0.1.74"

[build-dependencies]
tonic-prost-build = "0.14.2"