[package]
name = "self-improve-rs"
version = "0.1.0"
edition = "2024"
description = "Self-Improvement Engine for Phoenix ORCH AGI"

[lib]
name = "self_improve"
path = "src/lib.rs"

[dependencies]
tokio = { version = "1.48.0", features = ["full"] }
tracing = "0.1.43"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
thiserror = "1.0.50"
once_cell = "1.20"
uuid = { version = "1.11", features = ["v4", "serde"] }
chrono = { version = "0.4.31", features = ["serde"] }
metrics = "0.20"
config-rs = { path = "../config-rs" }
async-trait = "0.1"
config_update = { path = "../config-update-rs", package = "config-update-rs" }

[dev-dependencies]
tokio-test = "0.4"
tempfile = "3.8"