[package]
name = "sensor-rs"
version = "0.1.0"
edition = "2021"

[dependencies]
# System monitoring
sysinfo = "0.37"
active-win-pos-rs = "0.8"

# gRPC client
prost = "0.14.1"
tokio = { version = "1.48.0", features = ["full"] }
tonic = "0.14.2"
tonic-prost = "0.14.2"

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# Logging
log = "0.4.29"
env_logger = "0.11"
tracing = "0.1.43"
once_cell = "1.20"

[build-dependencies]
tonic-prost-build = "0.14.2"
