[package]
name = "shared-types-rs"
version = "0.1.0"
edition = "2021"

[dependencies]
vaultrs = "0.7"
tokio = { version = "1.0", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
chrono = { version = "0.4", features = ["serde"] }
thiserror = "1.0"
async-trait = "0.1"
tracing = "0.1"
uuid = { version = "1.0", features = ["v4", "serde"] }
dashmap = "5.5"
aes-gcm = "0.10"
base64 = "0.21"
rand = "0.8"

[dev-dependencies]
tokio-test = "0.4"
mockall = "0.11"
tempfile = "3.8"