[package]
name = "telemetrist-rs"
version = "0.1.0"
edition = "2021"
description = "Client-side Telemetry Service for Phoenix ORCH AGI"

[lib]
name = "telemetrist"
path = "src/lib.rs"

[dependencies]
# Core async runtime
tokio = { version = "1.48.0", features = ["full"] }
futures = "0.3"

# Logging and tracing
tracing = "0.1.43"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
log = "0.4.29"

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# HTTP client for streaming
reqwest = { version = "0.12", features = ["json", "stream"] }

# PII redaction
regex = "1.11"

# Error handling
thiserror = "1.0.50"
anyhow = "1.0"

# Time handling
chrono = "0.4"

# Utilities
uuid = { version = "1.11", features = ["v4"] }
once_cell = "1.20"

# Configuration
shared-types-rs = { path = "../shared-types-rs" }

[dev-dependencies]
tokio-test = "0.4"
mockall = "0.11"

